<resources>
    <string name="app_name">Tennis de table</string>
    <string name="action_settings">Settings</string>
    <string name="new_match">NOUVEAU MATCH</string>
    <string name="previous_match">PRECEDENTS MATCHS</string>
    <string name="title_activity_score">Score</string>
    <string name="service">SERVICE</string>
    <string name="score">SCORE</string>
    <string name="echange">ECHANGE</string>
    <string name="manche1">M1</string>
    <string name="manche2">M2</string>
    <string name="manche3">M3</string>
    <string name="let">LET</string>
    <string name="ace">ACE</string>
    <string name="title_activity_recapmatch">RECAP MATCH</string>
    <string name="title_activity_choixjoueur">CHOIX DES JOUEURS</string>
    <string name="prev_matches">PRECEDENTS MATCHS</string>
    <string name="player_1">Joueur 1</string>
    <string name="player_2">Joueur 2</string>
    <string name="service2">Service à :</string>
    <string name="go">C\'est parti!</string>
    <string name="Manche1">M1</string>
    <string name="Manche2">M2</string>
    <string name="Manche3">M3</string>
    <string name="gagne">Gagne</string>
    <string name="Perd">PERD</string>
    <string name="faute">FAUTE</string>
    <string name="fin">FIN</string>
    <string name="retour">RETOUR</string>
    <string name="match">MATCH</string>
    <string name="duree">DUREE</string>
    <string name="gagnant">GAGNANT:</string>
    <string name="Statistiques">STATISTIQUES</string>
    <string name="points">POINTS</string>
    <string name="aces">ACES</string>
    <string name="fautes">FAUTES</string>
    <string name="manches">MANCHES</string>
    <string name="duree2">DUREE :</string>
    <string name="title_activity_menu2">Menu2</string>
    <string name="title_activity_match">match</string>
    <string name="title_activity_previousmatches">Précédents matchs</string>
    <string name="Balle">NOMBRE DE BALLES :</string>
    <string name="match1">MATCH 1</string>
    <string name="match2">MATCH 2</string>
    <string name="match3" />
    <string name="match_3">MATCH 3</string>
    <string name="match4">MATCH 4</string>
    <string name="match5">MATCH 5</string>
    <string name="sert">a le service</string>
    <string name="enter">Entrez le nom des deux joueurs :</string>
    <string name="returnmatch">RETOUR MATCH</string>
    <string name="lat">lat</string>
    <string name="lng">long :</string>
    <string name="latitude">lat :</string>
    <string name="langue">Langue </string>
    <string name="francais">Français</string>
    <string name="English">English</string>
    <string name="title_activity_gallery">Gallery</string>
</resources>

