<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/match_1"
        android:orderInCategory="100"
        android:title="@string/match1"
        app:showAsAction="never" />
    <item
        android:id="@+id/match_2"
        android:orderInCategory="100"
        android:title="@string/match2"
        app:showAsAction="never" />
    <item
        android:id="@+id/match_3"
        android:orderInCategory="100"
        android:title="@string/match_3"
        app:showAsAction="never" />
    <item
        android:id="@+id/match_4"
        android:orderInCategory="100"
        android:title="@string/match4"
        app:showAsAction="never" />
    <item
        android:id="@+id/match_5"
        android:orderInCategory="100"
        android:title="@string/match5"
        app:showAsAction="never" />
</menu>