<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".choixjoueur"
    tools:showIn="@layout/activity_choixjoueur">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        app:layout_constrainedHeight="false"
        app:layout_constrainedWidth="false">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="#33A8A8A8"
            android:gravity="bottom|center"
            android:lineSpacingExtra="12sp"
            android:text="@string/enter"
            android:textAllCaps="false"
            android:textSize="22sp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <EditText
            android:id="@+id/entrer_joueur1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="#33A8A8A8"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:lineSpacingExtra="12sp"
            android:selectAllOnFocus="true"
            android:text="@string/player_1"
            android:textAllCaps="false"
            android:textSize="25sp"
            android:typeface="monospace"
            android:visibility="visible"
            tools:visibility="visible" />

        <EditText
            android:id="@+id/entrer_joueur2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="#33A8A8A8"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:lineSpacingExtra="12sp"
            android:selectAllOnFocus="true"
            android:text="@string/player_2"
            android:textAllCaps="false"
            android:textSize="25sp"
            android:typeface="monospace"
            android:visibility="visible"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/string_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="#33A8A8A8"
            android:gravity="bottom|center"
            android:lineSpacingExtra="12sp"
            android:text="@string/service"
            android:textAllCaps="false"
            android:textColor="#304848"
            android:textSize="30sp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/afficher_joueur1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="#33A8A8A8"
                android:gravity="center"
                android:lineSpacingExtra="12sp"
                android:text="@string/player_1"
                android:textAllCaps="false"
                android:textSize="25sp"
                android:typeface="monospace" />

            <CheckBox
                android:id="@+id/service_j1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="#33A8A8A8"
                android:lineSpacingExtra="12sp"
                android:onClick="onCheckboxClicked"
                android:text="@string/sert"
                android:textAllCaps="false"
                android:textSize="25sp"
                android:typeface="monospace" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/afficher_joueur2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="#33A8A8A8"
                android:gravity="center"
                android:lineSpacingExtra="12sp"
                android:text="@string/player_2"
                android:textAllCaps="false"
                android:textSize="25sp"
                android:typeface="monospace" />

            <CheckBox
                android:id="@+id/service_j2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="#33A8A8A8"
                android:lineSpacingExtra="12sp"
                android:onClick="onCheckboxClicked"
                android:text="@string/sert"
                android:textAllCaps="false"
                android:textSize="25sp"
                android:typeface="monospace" />

        </LinearLayout>

        <Button
            android:id="@+id/go"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="#CAA882"
            android:lineSpacingExtra="12sp"
            android:onClick="myClickHandlerGo"
            android:text="@string/go"
            android:textAllCaps="true"
            android:textSize="26sp"
            android:textStyle="bold"
            android:typeface="monospace" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>